--- a/react-app/src/containers/todo/todo.css
+++ b/react-app/src/containers/todo/todo.css
@@ -1,7 +1,7 @@
 .todo-container {
   background: #212a33;
   box-shadow: 5px 5px 7px rgba(33,33,33,.7);
-  height: 40vh;
+  height: 35vh;
   margin-bottom: 5vh;
 }
 
