--- a/react-app/src/styles/header.css
+++ b/react-app/src/styles/header.css
@@ -6,7 +6,3 @@
   color: #fff;
   box-shadow: 0 1px 3px rgba(0,0,0,0.3);
 }
-
-.box-header {
-
-}
